[package]
name = "hipdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lopdf = { git = "https://github.com/J-F-Liu/lopdf", version = "0.34.0" }
serde = { version = "1.0.210", features = ["derive"] }
